--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=issue_tracker;Username=postgres;Password=postgres;",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=IssueTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=issue_tracker;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
